Fix (occasional) double scrollbar in text boards on Windows <11

--- a/src/app/modules/sites/text-board/text-board.component.scss
+++ b/src/app/modules/sites/text-board/text-board.component.scss
@@ -1,5 +1,9 @@
 @import '../sites.component.scss';
 
+textarea {
+  overflow: hidden;
+}
+
 .mat-mdc-form-field {
   height: 100%;
   max-height: $board-max-height;
